--- a/app/src/main/res/layout/info_fragment.xml
+++ b/app/src/main/res/layout/info_fragment.xml
@@ -36,6 +36,7 @@
             android:textAllCaps="false" />
 
         <Button
+            android:id="@+id/btn_Album_IF"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/d_size_10dp"
