--- a/app/src/main/res/layout/post_fragment.xml
+++ b/app/src/main/res/layout/post_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_Todos_TF"
+        android:id="@+id/rv_Posts_PF"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
