--- a/app/src/main/res/layout/user_card.xml
+++ b/app/src/main/res/layout/user_card.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,10 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/c_text"
-        android:textSize="20sp"
-        tools:text="UserName"
+        android:textSize="17sp"
+        android:text="@string/s_user_name"
         android:gravity="center"
-        android:layout_margin="@dimen/d_size_10dp"
+        android:layout_margin="@dimen/d_size_5dp"
         android:clickable="true"/>
 
 </LinearLayout>
