--- a/app/src/main/res/layout/todo_card.xml
+++ b/app/src/main/res/layout/todo_card.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/sh"
@@ -14,7 +14,6 @@
         android:layout_margin="@dimen/d_size_5dp"
         android:clickable="true"
         android:textColor="@color/c_text"
-        android:textSize="13sp"
-        tools:text="TodoInfo" />
+        android:textSize="13sp" />
 
 </LinearLayout>
