--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -4,6 +4,6 @@
     android:shape="rectangle">
     <stroke
         android:width="2dp"
-        android:color="#000000">
+        android:color="@color/c_stroke">
     </stroke>
 </shape>
