--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/sh"
+    android:background="@drawable/shape"
     android:orientation="vertical">
 
     <TextView
@@ -14,7 +14,7 @@
         android:clickable="true"
         android:gravity="center"
         android:textColor="@color/c_text"
-        android:textSize="17sp"
-        android:text="@string/s_post_title" />
+        android:textSize="@dimen/d_text_17sp"
+/>
 
 </LinearLayout>
