--- a/app/src/main/res/layout/post_info_fragment.xml
+++ b/app/src/main/res/layout/post_info_fragment.xml
@@ -14,10 +14,10 @@
         android:layout_marginLeft="@dimen/d_size_10dp"
         android:layout_marginRight="@dimen/d_size_10dp"
         android:layout_marginTop="@dimen/d_size_10dp"
-        android:background="@drawable/sh"
+        android:background="@drawable/shape"
         android:padding="@dimen/d_size_10dp"
         android:textColor="@color/c_text"
-        android:textSize="13sp" />
+        android:textSize="@dimen/d_text_13sp" />
 
     <Button
         android:id="@+id/btn_Comment_PIF"
@@ -25,8 +25,8 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/d_size_10dp"
-        android:background="@drawable/sh"
-        android:text="COMMENTs"
+        android:background="@drawable/shape"
+        android:text="@string/s_comment"
         android:textAllCaps="false" />
 
 
