--- a/app/src/main/res/layout/user_card.xml
+++ b/app/src/main/res/layout/user_card.xml
@@ -4,15 +4,14 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/sh">
+    android:background="@drawable/shape">
 
     <TextView
         android:id="@+id/tv_UserName_UC"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/c_text"
-        android:textSize="17sp"
-        android:text="@string/s_user_name"
+        android:textSize="@dimen/d_text_17sp"
         android:gravity="center"
         android:layout_margin="@dimen/d_size_5dp"
         android:clickable="true"/>
