--- a/app/src/main/res/layout/user_info_fragment.xml
+++ b/app/src/main/res/layout/user_info_fragment.xml
@@ -13,10 +13,10 @@
         android:layout_marginLeft="@dimen/d_size_10dp"
         android:layout_marginRight="@dimen/d_size_10dp"
         android:layout_marginTop="@dimen/d_size_10dp"
-        android:background="@drawable/sh"
+        android:background="@drawable/shape"
         android:padding="@dimen/d_size_10dp"
         android:textColor="@color/c_text"
-        android:textSize="13sp" />
+        android:textSize="@dimen/d_text_13sp" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -31,8 +31,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/sh"
-            android:text="TODOs"
+            android:background="@drawable/shape"
+            android:text="@string/s_todo"
             android:textAllCaps="false" />
 
         <Button
@@ -42,8 +42,8 @@
             android:layout_marginLeft="@dimen/d_size_10dp"
             android:layout_marginRight="@dimen/d_size_10dp"
             android:layout_weight="1"
-            android:background="@drawable/sh"
-            android:text="ALBUMs"
+            android:background="@drawable/shape"
+            android:text="@string/s_album"
             android:textAllCaps="false" />
 
         <Button
@@ -51,8 +51,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/sh"
-            android:text="POSTs"
+            android:background="@drawable/shape"
+            android:text="@string/s_post"
             android:textAllCaps="false" />
 
     </LinearLayout>
