--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <resources>
     <dimen name="d_size_10dp">10dp</dimen>
     <dimen name="d_size_5dp">5dp</dimen>
+
+    <dimen name="d_text_13sp">13sp</dimen>
+    <dimen name="d_text_17sp">17sp</dimen>
 </resources>
